# edfrw

./: .gitignore  .readthedocs.yaml  404.html  README.md  README.rst  __init__.py  headers.py  index.html  mkdocs.yml  objects.inv  reader.py  search.html  setup.cfg  sitemap.xml  writer.py
api/api/: index.html
api/headers/: index.html
api/reader/: index.html
api/writer/: index.html
docs/: conf.py  index.md  license.md  specifications.rst
docs/api/: api.md  headers.md  reader.md  writer.md
docs/source/: api.rst  conf.py  index.rst  license.md  requirements.txt  specifications.md  usage.md
docs/source/autosummary/: edfrw.headers.rst  edfrw.reader.rst  edfrw.writer.rst
docs/usage/: reading.md  specifications.md
license/: index.html
search/: search_index.json
src/edfrw/: __init__.py  headers.py  reader.py  writer.py
usage/reading/: index.html
usage/specifications/: index.html
usage/writing/: index.html
