[metadata]
name = edfrw
version = attr: edfrw.__version__
author = Antonio González
author_email = antgon@cantab.net
description = Read and write European Data Format (EDF) files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antgon/edfrw
project_urls =
    Bug Tracker = https://github.com/antgon/edfrw/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
